Update methods && swag documentation
