# docs/swagger.json
@@ -22,6 +22,17 @@
                     "Auth"
                 ],
                 "summary": "User login",
+                "parameters": [
+                    {
+                        "description": "Enter your username and password",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserLogin"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -69,6 +80,17 @@
                     "Auth"
                 ],
                 "summary": "User signup",
+                "parameters": [
+                    {
+                        "description": "Enter your registration details",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Users"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -152,7 +174,7 @@
             "post": {
                 "security": [
                     {
-                        "userLogin": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "created new comments",
@@ -166,6 +188,17 @@
                     "Comments"
                 ],
                 "summary": "Create new comments",
+                "parameters": [
+                    {
+                        "description": "Enter comment data to create a comment",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Comments"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -234,7 +267,7 @@
             "put": {
                 "security": [
                     {
-                        "userLogin": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "updated comment data",
@@ -248,6 +281,24 @@
                     "Comments"
                 ],
                 "summary": "Update comment by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Comment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Enter comment data to create a comment",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Comments"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -284,7 +335,7 @@
             "delete": {
                 "security": [
                     {
-                        "userLogin": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "deleted comment data",
@@ -298,6 +349,15 @@
                     "Comments"
                 ],
                 "summary": "Delete comment by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Comment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -381,7 +441,7 @@
             "post": {
                 "security": [
                     {
-                        "userLogin": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "created new post",
@@ -395,6 +455,17 @@
                     "Posts"
                 ],
                 "summary": "Create new post",
+                "parameters": [
+                    {
+                        "description": "Enter post data to create a new post",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Posts"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -464,7 +535,7 @@
             "put": {
                 "security": [
                     {
-                        "userLogin": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "updated post data",
@@ -478,6 +549,24 @@
                     "Posts"
                 ],
                 "summary": "Update post by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Enter post data to update a post",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Posts"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -514,7 +603,7 @@
             "delete": {
                 "security": [
                     {
-                        "userLogin": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "deleted post data",
@@ -528,6 +617,15 @@
                     "Posts"
                 ],
                 "summary": "Delete post by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -620,6 +718,43 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.UserLogin": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Users": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "website": {
+                    "type": "string"
                 }
             }
         }
