# handlers/comments.go
@@ -4,8 +4,9 @@ import (
 	"net/http"
 	"regexp"
 
-	"github.com/labstack/echo/v4"
 	"github.com/nikolas-kokhno/nix_blog/models"
+
+	"github.com/labstack/echo/v4"
 )
 
 var emailRegex = regexp.MustCompile("^[a-zA-Z0-9.!#$%&'*+\\/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$")
@@ -22,7 +23,7 @@ func GetCommentByID(c echo.Context) error {
 	commentModel := new(models.Comments)
 
 	if err := models.DB.Where("id = ?", c.Param("id")).First(&commentModel).Error; err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusNotFound, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -52,7 +53,7 @@ func GetAllComments(c echo.Context) error {
 	/* Filter by post_id */
 	if post_id != "" {
 		if err := models.DB.First(&commentsModel, "post_id = ?", post_id).Error; err != nil {
-			return c.JSON(http.StatusBadRequest, ErrorResponse{
+			return c.JSON(http.StatusBadRequest, MessageResponse{
 				Status:  "error",
 				Message: err.Error(),
 			})
@@ -74,11 +75,12 @@ func GetAllComments(c echo.Context) error {
 
 // @Summary Create new comments
 // @Tags Comments
-// @Security userLogin
+// @Security ApiKeyAuth
 // @Description created new comments
 // @ModuleID createNewComments
 // @Accept  json
 // @Produce  json
+// @Param data body models.Comments true "Enter comment data to create a comment"
 // @Success 200 {object} SuccessResponse
 // @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
@@ -87,7 +89,7 @@ func GetAllComments(c echo.Context) error {
 func CreateNewComment(c echo.Context) error {
 	commentModel := new(models.Comments)
 	if err := c.Bind(commentModel); err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -95,7 +97,7 @@ func CreateNewComment(c echo.Context) error {
 
 	/* Validate required request field */
 	if commentModel.Name == "" || commentModel.Email == "" || commentModel.Body == "" {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <name>, <email>, <body> are required",
 		})
@@ -103,7 +105,7 @@ func CreateNewComment(c echo.Context) error {
 
 	/* Validate characters request field */
 	if len(commentModel.Name) < 3 || len(commentModel.Email) < 3 || len(commentModel.Body) < 3 {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <name>, <email>, <body> must be more than 2 characters",
 		})
@@ -111,23 +113,25 @@ func CreateNewComment(c echo.Context) error {
 
 	/* Check for valid email */
 	if !isEmailValid(commentModel.Email) {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "email is not valid",
 		})
 	}
 
 	models.DB.Create(&commentModel)
-	return c.JSON(http.StatusOK, commentModel)
+	return c.JSON(http.StatusCreated, commentModel)
 }
 
 // @Summary Update comment by ID
 // @Tags Comments
-// @Security userLogin
+// @Security ApiKeyAuth
 // @Description updated comment data
 // @ModuleID updateCommentByID
 // @Accept  json
 // @Produce  json
+// @Param id path int true "Comment ID"
+// @Param data body models.Comments true "Enter comment data to create a comment"
 // @Success 200 {object} SuccessResponse
 // @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
@@ -135,8 +139,9 @@ func CreateNewComment(c echo.Context) error {
 // @Router /comments/{id} [put]
 func UpdateCommentByID(c echo.Context) error {
 	commentModel := new(models.Comments)
+	commentsID := c.Param("id")
 	if err := c.Bind(commentModel); err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -144,7 +149,7 @@ func UpdateCommentByID(c echo.Context) error {
 
 	/* Validate required request field */
 	if commentModel.Name == "" || commentModel.Email == "" || commentModel.Body == "" || commentModel.PostId <= 0 {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <name>, <email>, <body>, <user_id> are required",
 		})
@@ -152,7 +157,7 @@ func UpdateCommentByID(c echo.Context) error {
 
 	/* Validate characters request field */
 	if len(commentModel.Name) < 3 || len(commentModel.Email) < 3 || len(commentModel.Body) < 3 {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <name>, <email>, <body> must be more than 2 characters",
 		})
@@ -160,27 +165,35 @@ func UpdateCommentByID(c echo.Context) error {
 
 	/* Check for valid email */
 	if !isEmailValid(commentModel.Email) {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "email is not valid",
 		})
 	}
 
-	if err := models.DB.Model(&commentModel).Update(models.Comments{Name: commentModel.Name, Email: commentModel.Email, Body: commentModel.Body}).Error; err != nil {
-		return c.JSON(http.StatusInternalServerError, ErrorResponse{
+	/* Checking if id exists in the db  */
+	commetsData := models.Comments{}
+	if err := models.DB.Where("id = ?", commentsID).First(&commetsData).Error; err != nil {
+		return c.JSON(http.StatusNotFound, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
 	}
 
-	return c.JSON(http.StatusOK, commentModel)
+	models.DB.Model(&models.Comments{}).Where("id = ?", commentsID).Updates(models.Comments{Body: commentModel.Body})
+
+	return c.JSON(http.StatusOK, MessageResponse{
+		Status:  "success",
+		Message: "Comment updated successfully!",
+	})
 }
 
 // @Summary Delete comment by ID
 // @Tags Comments
-// @Security userLogin
+// @Security ApiKeyAuth
 // @Description deleted comment data
 // @ModuleID deleteCommentByID
+// @Param id path int true "Comment ID"
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} SuccessResponse
@@ -191,7 +204,7 @@ func UpdateCommentByID(c echo.Context) error {
 func DeleteCommentByID(c echo.Context) error {
 	commentModel := new(models.Comments)
 	if err := models.DB.Where("id = ?", c.Param("id")).First(&commentModel).Error; err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusNotFound, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -199,7 +212,7 @@ func DeleteCommentByID(c echo.Context) error {
 
 	models.DB.Delete(&commentModel)
 
-	return c.JSON(http.StatusOK, ErrorResponse{
+	return c.JSON(http.StatusOK, MessageResponse{
 		Status:  "success",
 		Message: "Comment deleted successfully!",
 	})
