# handlers/posts.go
@@ -1,10 +1,12 @@
 package handlers
 
 import (
+	"fmt"
 	"net/http"
 
-	"github.com/labstack/echo/v4"
 	"github.com/nikolas-kokhno/nix_blog/models"
+
+	"github.com/labstack/echo/v4"
 )
 
 // @Summary Get post by ID
@@ -20,7 +22,7 @@ func GetPostByID(c echo.Context) error {
 	postModel := new(models.Posts)
 
 	if err := models.DB.Where("id = ?", c.Param("id")).First(&postModel).Error; err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusNotFound, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -50,7 +52,7 @@ func GetAllPosts(c echo.Context) error {
 	/* Filter by user_id */
 	if user_id != "" {
 		if err := models.DB.First(&postModel, "user_id = ?", user_id).Error; err != nil {
-			return c.JSON(http.StatusBadRequest, ErrorResponse{
+			return c.JSON(http.StatusBadRequest, MessageResponse{
 				Status:  "error",
 				Message: err.Error(),
 			})
@@ -72,11 +74,12 @@ func GetAllPosts(c echo.Context) error {
 
 // @Summary Create new post
 // @Tags Posts
-// @Security userLogin
+// @Security ApiKeyAuth
 // @Description created new post
 // @ModuleID createNewPost
 // @Accept  json
 // @Produce  json
+// @Param data body models.Posts true "Enter post data to create a new post"
 // @Success 200 {object} SuccessResponse
 // @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
@@ -85,12 +88,12 @@ func GetAllPosts(c echo.Context) error {
 func CreateNewPost(c echo.Context) error {
 	postModel := new(models.Posts)
 	if err := c.Bind(postModel); err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{Status: "error", Message: err.Error()})
+		return c.JSON(http.StatusBadRequest, MessageResponse{Status: "error", Message: err.Error()})
 	}
 
 	/* Validate required request field */
 	if postModel.Title == "" || postModel.Body == "" || postModel.UserID <= 0 {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <title>, <body>, <user_id> are required",
 		})
@@ -98,23 +101,25 @@ func CreateNewPost(c echo.Context) error {
 
 	/* Validate characters request field */
 	if len(postModel.Title) < 3 || len(postModel.Body) < 3 {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <title>, <body> must be more than 2 characters",
 		})
 	}
 
 	models.DB.Create(&postModel)
-	return c.JSON(http.StatusOK, postModel)
+	return c.JSON(http.StatusCreated, postModel)
 }
 
 // @Summary Update post by ID
 // @Tags Posts
-// @Security userLogin
+// @Security ApiKeyAuth
 // @Description updated post data
 // @ModuleID updatePostByID
 // @Accept  json
 // @Produce  json
+// @Param id path int true "Post ID"
+// @Param data body models.Posts true "Enter post data to update a post"
 // @Success 200 {object} SuccessResponse
 // @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
@@ -122,8 +127,9 @@ func CreateNewPost(c echo.Context) error {
 // @Router /posts/{id} [put]
 func UpdatePostByID(c echo.Context) error {
 	postModel := new(models.Posts)
+	postID := c.Param("id")
 	if err := c.Bind(postModel); err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -131,7 +137,7 @@ func UpdatePostByID(c echo.Context) error {
 
 	/* Validate required request field */
 	if postModel.Title == "" || postModel.Body == "" {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <title>, <body> are required",
 		})
@@ -139,31 +145,38 @@ func UpdatePostByID(c echo.Context) error {
 
 	/* Validate characters request field */
 	if len(postModel.Title) < 3 || len(postModel.Body) < 3 {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusBadRequest, MessageResponse{
 			Status:  "error",
 			Message: "Fields: <title>, <body> must be more than 2 characters",
 		})
 	}
 
 	/* Checking if id exists in the db  */
-	if err := models.DB.Where("id = ?", c.Param("id")).First(&postModel).Error; err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+	postData := models.Posts{}
+	if err := models.DB.Where("id = ?", postID).First(&postData).Error; err != nil {
+		return c.JSON(http.StatusNotFound, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
 	}
 
-	models.DB.Model(&postModel).Update(models.Posts{Title: postModel.Title, Body: postModel.Body})
-	return c.JSON(http.StatusOK, postModel)
+	fmt.Println(postModel.Title)
+
+	models.DB.Model(&models.Posts{}).Where("id = ?", postID).Updates(models.Posts{Title: postModel.Title, Body: postModel.Body})
+	return c.JSON(http.StatusOK, MessageResponse{
+		Status:  "success",
+		Message: "Post data updated successfully!",
+	})
 }
 
 // @Summary Delete post by ID
 // @Tags Posts
-// @Security userLogin
+// @Security ApiKeyAuth
 // @Description deleted post data
 // @ModuleID deletePostByID
 // @Accept  json
 // @Produce  json
+// @Param id path int true "Post ID"
 // @Success 200 {object} SuccessResponse
 // @Failure 400,404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
@@ -172,7 +185,7 @@ func UpdatePostByID(c echo.Context) error {
 func DeletePostByID(c echo.Context) error {
 	postModel := new(models.Posts)
 	if err := models.DB.Where("id = ?", c.Param("id")).First(&postModel).Error; err != nil {
-		return c.JSON(http.StatusBadRequest, ErrorResponse{
+		return c.JSON(http.StatusNotFound, MessageResponse{
 			Status:  "error",
 			Message: err.Error(),
 		})
@@ -180,7 +193,7 @@ func DeletePostByID(c echo.Context) error {
 
 	models.DB.Delete(&postModel)
 
-	return c.JSON(http.StatusOK, ErrorResponse{
+	return c.JSON(http.StatusOK, MessageResponse{
 		Status:  "success",
 		Message: "Post deleted successfully!",
 	})
